                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 09-06-2006 fixed: Initial control visibility for the list/thumb controls wasn't set correctly for Media window WindowOpen animations.
 - 09-06-2006 changed: Removed playlist track format from GUI - it just uses the music track format unless you specify otherwise using advancedsettings.xml.
 - 09-06-2006 fixed: stack file size.
 - 08-06-2006 added: Support for START to select Done in Numeric dialog.
 - 08-06-2006 fixed: Screensaver preview did not show the correct screensaver if music or video was playing.
 - 08-06-2006 fixed: Delete on playlists/smart playlists could delete all their files as well.
 - 08-06-2006 changed: Cleaned up some more settings (postprocessing to xml only, use auto sync removed (use mplayer.conf), and subtitles default to arial.ttf.
 - 08-06-2006 changed: Add/Edit Source dialog can now handle multiple paths.  Skinners should update at their leisure (old skins will mean the multipath editing will only affect the first path).
 - 08-06-2006 fixed: [ 1453640 ] AAC In MP4 Incorrect CBR Detection, by removing the text.
 - 08-06-2006 fixed: ftpserver would sometimes crash when user disconnected
 - 08-06-2006 changed: replaced our own ftp client with a client based on curl
 - 08-06-2006 updated: libcurl.dll to precompiled binary curl-7.15.3-win32-nossl-sspi from curl.haxx.se
 - 07-06-2006 fixed: [ 1500349 ] .cdda files showing in every section
 - 07-06-2006 changed: restored dllloader fixes that previously broke realmedia
 - 07-06-2006 changed: Simplified the auto thumb switching for My Music in line with the other views.
 - 07-06-2006 fixed: Get Thumb option wasn't enabled for Album Information.